# todoist

./: .gitignore  Makefile  README.md  TESTING.md  project_workflow.py  pyproject.toml
evals/: eval_todoist.py
tests/: test_client.py  test_projects.py  test_tasks.py  test_utils.py
todoist/: __init__.py  oauth.py
todoist/tools/: __init__.py  client.py  projects.py  tasks.py
