[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "todoist"
version = "0.1.1"
description = "Manages Todoist tasks"
requires-python = ">=3.10"
dependencies = [
    "arcade-ai[all,evals]>=2.1.4",
    "arcade-core>=2.3.0",
    "arcade-serve>=2.0.0",
    "arcade-tdk>=2.0.0,<3.0.0",
    "coverage>=7.10.6",
    "httpx>=0.27",
    "langchain>=0.3.27",
    "langchain-arcade>=1.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.2.76",
    "mypy>=1.5.1",
    "pydantic>=2.11.7",
    "pytest>=8.3.5",
]
[[project.authors]]
name = "damonll"
email = "damon@lacailles.com"


[project.optional-dependencies]
dev = [
    "arcade-ai[evals]>=2.1.4,<3.0.0",
    "arcade-serve>=2.0.0,<3.0.0",
    "pytest>=8.3.0,<8.4.0",
    "pytest-cov>=4.0.0,<4.1.0",
    "pytest-mock>=3.11.1,<3.12.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "mypy>=1.5.1,<1.6.0",
    "pre-commit>=3.4.0,<3.5.0",
    "tox>=4.11.1,<4.12.0",
    "ruff>=0.7.4,<0.8.0",
]

# Tell Arcade.dev that this package is a toolkit
[project.entry-points.arcade_toolkits]
toolkit_name = "todoist"

[tool.mypy]
files = [ "todoist/**/*.py",]
python_version = "3.10"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = [ "tests",]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
    "integration: marks tests as integration tests",
]

[tool.coverage.report]
skip_empty = true

[tool.hatch.build.targets.wheel]
packages = [ "todoist",]
